--- a/products-2.html
+++ b/products-2.html
@@ -89,15 +89,35 @@
 		</div>
 	</div>
 </div>
-
+<div class="product-detials-area">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-8 col-md-12">
+				<div class="row">
+					<div class="col-lg-12 col-sm-12">
+						<div class="product-details-content">
+							<div class="product-page-title">
+								<h1>Our Products</h1>
+							</div>
+							<div class="product-details-content">
+								<div class="product-details-desc">
+									<h2>The right solution for every industry</h2>
+									<p>Tailor-made products, intelligent solutions, comprehensive service and certified safety:</p>
+									<p>This distinguishes the versatile pump technology of Neutrone®. With Neutrone® you build on an expertise of more than 20 years that is highly valued worldwide. The special quality of the products and their long service life ensure process and operational safety and avoid downtime costs.</p>
+									<p>The Neutrone® product portfolio ranges from the well-known mixers and pumps.</p>
+									<a class="product-button" style="align-self: flex-start;" target="_blank" href="assets/docs/general.pdf"><img src="../assets/images/resource/pdf.png" alt=""> General Brochure of Neutrone® products </a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 <div class="product-area style-two">
 	<div class="container">
 		<div class="row align-items-center">
-			<div class="col-lg-6 col-md-12">
-				<div class="section-title inner">
-					<h1>Our Products</h1>
-				</div>
-			</div>
 			<div class="col-lg-6 col-md-12 d-none">
 				<div class="portfolio_nav">
 					<div class="portfolio_menu">
@@ -111,7 +131,7 @@
 			</div>
 		</div>
 		<div class="row image_load">
-			<div class="col-lg-3 grid-item">
+			<div class="col-lg-6 grid-item">
 				<div class="single-product-box">
 					<div class="product-thumb">
 						<img src="assets/images/resource/mixers.png" alt="">
@@ -121,19 +141,8 @@
                         <a class="product-button" href="mixers.html">View Products</a>
 					</div>
 				</div>
-			</div>
+			</div>				
 			<div class="col-lg-6 grid-item">
-				<div class="single-product-box">
-					<div class="product-thumb">
-						<img src="assets/images/resource/mixers.png" alt="">
-					</div>
-					<div class="products-content" style="flex-flow: column wrap;align-items: flex-start;display: flex;">
-						<a class="mb-3" target="_blank" href="assets/docs/general.pdf">Neutrone® Mixers</a>
-                        <a class="product-button" style="align-self: flex-start;" target="_blank" href="assets/docs/general.pdf">View General Brochure</a>
-					</div>
-				</div>
-			</div>					
-			<div class="col-lg-3 grid-item">
 				<div class="single-product-box">
 					<div class="product-thumb">
 						<img src="assets/images/resource/pumps.png" alt="">
