--- a/products-2.html
+++ b/products-2.html
@@ -102,9 +102,8 @@
 							<div class="product-details-content">
 								<div class="product-details-desc">
 									<h2>The right solution for every industry</h2>
-									<p>Tailor-made products, intelligent solutions, comprehensive service and certified safety:</p>
-									<p>This distinguishes the versatile pump technology of Neutrone®. With Neutrone® you build on an expertise of more than 20 years that is highly valued worldwide. The special quality of the products and their long service life ensure process and operational safety and avoid downtime costs.</p>
-									<p>The Neutrone® product portfolio ranges from the well-known mixers and pumps.</p>
+									<p>Tailor-made products, innovative solutions, comprehensive service, and certified safety define the versatile mixers and pump technology of Neutrone®.</p>
+									<p>With over 20 years of globally recognized expertise, Neutrone® delivers exceptional product quality and durability, ensuring operational reliability and minimizing downtime costs. The Neutrone® product range features its renowned mixers and pumps, designed to meet diverse industrial needs.</p>
 									<a class="product-button" style="align-self: flex-start;" target="_blank" href="assets/docs/general.pdf"><img src="../assets/images/resource/pdf.png" alt=""> General Brochure of Neutrone® products </a>
 								</div>
 							</div>
