--- a/products-2.html
+++ b/products-2.html
@@ -104,7 +104,7 @@
 									<h2>The right solution for every industry</h2>
 									<p>Tailor-made products, innovative solutions, comprehensive service, and certified safety define the versatile mixers and pump technology of Neutrone®.</p>
 									<p>With over 20 years of globally recognized expertise, Neutrone® delivers exceptional product quality and durability, ensuring operational reliability and minimizing downtime costs. The Neutrone® product range features its renowned mixers and pumps, designed to meet diverse industrial needs.</p>
-									<a class="product-button" style="align-self: flex-start;" target="_blank" href="assets/docs/general.pdf"><img src="../assets/images/resource/pdf.png" alt=""> General Brochure of Neutrone® products </a>
+									<a style="align-self: flex-start;" target="_blank" href="assets/docs/general.pdf"><img src="../assets/images/resource/pdf.png" alt=""> General Brochure of Neutrone® products </a>
 								</div>
 							</div>
 						</div>
