--- a/products-2.html
+++ b/products-2.html
@@ -102,8 +102,7 @@
 							<div class="product-details-content">
 								<div class="product-details-desc">
 									<h2>The right solution for every industry</h2>
-									<p>Tailor-made products, innovative solutions, comprehensive service, and certified safety define the versatile mixers and pump technology of Neutrone®.</p>
-									<p>With over 20 years of globally recognized expertise, Neutrone® delivers exceptional product quality and durability, ensuring operational reliability and minimizing downtime costs. The Neutrone® product range features its renowned mixers and pumps, designed to meet diverse industrial needs.</p>
+									<p>Neutrone® delivers tailor-made mixers and pumps with over 20 years of expertise, ensuring certified safety, durability, and minimized downtime costs. The Neutrone® product range features its renowned mixers and pumps, designed to meet diverse industrial needs.</p>
 									<a style="border-top:0px solid #2eb9ce;border-right:0px solid #2eb9ce;border-bottom:4px solid #2eb9ce;border-left:0px solid #2eb9ce;padding-bottom:4px;" target="_blank" href="assets/docs/general.pdf"><img style="padding-bottom:4px;" src="assets/images/resource/pdf.png" alt=""> General Brochure of Neutrone® products </a>
 								</div>
 							</div>
