--- a/products-2.html
+++ b/products-2.html
@@ -132,7 +132,7 @@
 						<img src="assets/images/resource/mixers.png" alt="">
 					</div>
 					<div class="products-content">
-						<a class="mb-3" href="mixers.html">Neutrone® Mixers</a>
+						<h3><a class="mb-3" href="mixers.html">Neutrone® Mixers</a></h3>
                         <a class="product-button" href="mixers.html">View Products</a>
 					</div>
 				</div>
@@ -143,7 +143,7 @@
 						<img src="assets/images/resource/pumps.png" alt="">
 					</div>
 					<div class="products-content">
-						<a class="mb-3" href="pumps.html">Neutrone® Pumps</a>
+						<h3><a class="mb-3" href="pumps.html">Neutrone® Pumps</a></h3>
                         <a class="product-button" href="pumps.html">View Products</a>
 					</div>
 				</div>
