--- a/products-2.html
+++ b/products-2.html
@@ -89,7 +89,7 @@
 		</div>
 	</div>
 </div>
-<div class="product-detials-area">
+<div class="product-detials-area pb-0">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-8 col-md-12">
