--- a/privacy.html
+++ b/privacy.html
@@ -98,13 +98,13 @@
         <div class="row d-flex align-items-center">
           <div class="col-lg-12">
             <div class="breadcumb-content">
-              <h1>Careers</h1>
+              <h1>Privacy Policy</h1>
               <ul>
                 <li>
                   <i class="fas fa-house-user"></i>
                   <a href="index.html">Home</a>
                 </li>
-                <li>Careers </li>
+                <li>Privacy Policy </li>
               </ul>
             </div>
           </div>
