--- a/products/bp.html
+++ b/products/bp.html
@@ -104,7 +104,7 @@
 								</div>
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p><strong>Neutrone® BPS Series</strong> is a cast iron end-suction centrifugal pump featuring a Back Pull Out (BPO) design for easy maintenance and serviceability. Its robust cast iron construction ensures durability and reliability, making it ideal for handling various industrial fluids. The BPO feature allows for quick disassembly of the rotating components without disturbing the piping, minimizing downtime and reducing maintenance costs.</p>
+										<p><strong>Neutrone® BP Series</strong> is a cast iron end-suction centrifugal pump featuring a Back Pull Out (BPO) design for easy maintenance and serviceability. Its robust cast iron construction ensures durability and reliability, making it ideal for handling various industrial fluids. The BPO feature allows for quick disassembly of the rotating components without disturbing the piping, minimizing downtime and reducing maintenance costs.</p>
 									</div>
 								</div>
 							</div>
