--- a/products/n1.html
+++ b/products/n1.html
@@ -160,7 +160,7 @@
 										<h4>Durability and Long Life</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>Engineered to withstand rigorous industrial environments, ensuring long-term, trouble-free operation.</p>
+										<p>Built for longevity and engineered to withstand rigorous industrial environments, ensuring long-term, trouble-free operation.</p>
 									</div>
 								</div>	
 							</div>
@@ -168,7 +168,7 @@
 						<div class="col-lg-12">
 							<div class="product-details-content">
 								<div class="product-details-desc">
-									<p><b>Neutrone® Top Entry (Light/Medium/Heavy Duty) Mixers, N Series</b> deliver deliver consistent, high-quality mixing results, whether in batch or continuous processing environments, at a competitive price point.</p>
+									<p><b>Neutrone® Top Entry (Light/Medium/Heavy Duty) Mixers, N Series</b> deliver consistent, high-quality mixing results, whether in batch or continuous processing environments, at a competitive price point.</p>
 								</div>
 							</div>
 						</div>
