--- a/products/n5se.html
+++ b/products/n5se.html
@@ -104,7 +104,7 @@
 								</div>
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p><strong>Neutrone® Side Entry Mixer, N5SE Series</strong> are designed to provide reliable, efficient, and safe mixing solutions for large-scale industrial applications. Equipped with a shut-off device for added safety and ease of operation especially useful in situations where top-entry mixers would be inefficient or impractical.</p>
+										<p><strong>Neutrone® Side Entry Mixer, N5SE Series</strong> are designed to provide reliable, efficient, and safe mixing solutions for large-scale industrial applications and equipped with a shut-off device for added safety and ease of operation especially useful in situations where top-entry mixers would be inefficient or impractical.</p>
 										<p class="pb_30"><strong>Key Features & Benefits:</strong></p>
 									</div>
 								</div>
