--- a/products/n5se.html
+++ b/products/n5se.html
@@ -117,7 +117,7 @@
 										<h4>Gear-Driven Design</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>Utilizes a gear-driven system, providing strong, consistent mixing performance. With durability and low maintenance, making it ideal for demanding industrial processes.</p>
+										<p>Utilizes a gear-driven system, providing strong, consistent mixing performance with durability and low maintenance, making it ideal for demanding industrial processes.</p>
 									</div>
 								</div>
 							</div>
@@ -141,7 +141,7 @@
 										<h4>Space-Saving and Practical Design</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>These side-entry mixers are mounted on the side of the tank, making them ideal for applications with limited headroom or restricted access. Unlike top-entry mixers that require long shafts and more complex installation, side-entry mixers are more compact and easier to install in large tanks or vessels with confined spaces.</p>
+										<p>Mounted on the side of the tank, making them ideal for applications with limited headroom or restricted access. Unlike top-entry mixers that require long shafts and more complex installation, side-entry mixers are more compact and easier to install in large tanks or vessels with confined spaces.</p>
 									</div>
 								</div>	
 							</div>
@@ -153,7 +153,7 @@
 										<h4>Cost-Effective Solution for Large Tanks</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>The Neutrone® N5SE Series is particularly well-suited for large tank installations. Side-entry mixers do not require the long, expensive shafts that are needed in top-entry designs for very large tanks, making them a more economical option for mixing in such environments.</p>
+										<p>Particularly well-suited for large tank installations. Side-entry mixers do not require the long, expensive shafts that are needed in top-entry designs for very large tanks, making them a more economical option for mixing in such environments.</p>
 									</div>
 								</div>	
 							</div>
@@ -187,7 +187,7 @@
 								<div class="product-details-desc">
 									<ul>
 										<li><strong>Space Efficiency: </strong> Ideal for installations where space is limited or where access from above (as required for top-entry mixers) is not possible.</li>
-										<li><strong>High Efficiency:</strong> These mixers provide consistent, high-efficiency mixing with minimal pressure drop. The radial mixing action ensures optimal blending of fluids and solids in a wide range of applications.</li>
+										<li><strong>High Efficiency:</strong> Provide consistent, high-efficiency mixing with minimal pressure drop. The radial mixing action ensures optimal blending of fluids and solids in a wide range of applications.</li>
 										<li><strong>Lower Capital Investment: </strong> For large tank installations and can be more affordable compared to top-entry mixers due to simpler installation and fewer mechanical components.</li>
 										<li><strong>Improved Safety: </strong> The built-in shut-off device offers an added layer of protection, ensuring operators can easily isolate the mixer during maintenance or when it's not in use, minimizing the risk of accidents.</li>
 										<li><strong>Cost-Efficiency: </strong> Offers a cost-effective solution for large tank mixing, providing high efficiency without the need for complex shaft systems, which are typically required in tall or deep tanks.</li>
