--- a/products/nms.html
+++ b/products/nms.html
@@ -199,9 +199,9 @@
 							<div class="product-details-content">
 								<div class="product-details-desc">
 									<ul>
-										<li><strong>Low Maintenance:</strong> Since there are no moving parts, there’s minimal wear and tear, resulting in lower maintenance costs and longer service life.</li>
-										<li><strong>High Efficiency:</strong> These mixers provide consistent, high-efficiency mixing with minimal pressure drop. The radial mixing action ensures optimal blending of fluids and solids in a wide range of applications.</li>
-										<li><strong>Compact and Robust: </strong> Neutrone In-Line Static Mixers are designed to fit into tight spaces, making them ideal for installations where other mixing solutions might be too bulky or impractical.</li>
+										<li><strong>Low Maintenance:</strong> No moving parts, there’s minimal wear and tear, resulting in lower maintenance costs and longer service life.</li>
+										<li><strong>High Efficiency:</strong> Provide consistent, high-efficiency mixing with minimal pressure drop. The radial mixing action ensures optimal blending of fluids and solids in a wide range of applications.</li>
+										<li><strong>Compact and Robust: </strong> Designed to fit into tight spaces, making them ideal for installations where other mixing solutions might be too bulky or impractical.</li>
 										<li><strong>Energy Saving: </strong> No need for external power and operate purely based on the flow energy of the process stream, leading to reduced operating costs and energy consumption.</li>
 										<li><strong>Customization: </strong> Custom designs ensure that the mixers can be optimized for specific processes, whether you are mixing high-viscosity liquids, fine powders, or gas-liquid mixtures.</li>
 									</ul>
