--- a/products/n5be.html
+++ b/products/n5be.html
@@ -180,7 +180,7 @@
 										<li><strong>Solid Suspension and Prevention of Settling: </strong> Particularly beneficial in applications where solids need to stay suspended in liquids, such as in slurry or wastewater treatment.</li>
 										<li><strong>Efficient Heat Transfer: </strong> By ensuring even mixing, the N5BE Series promotes uniform heat distribution, enhancing the effectiveness of heat exchange and improving overall process efficiency.</li>
 									</ul>
-									<p>The Neutrone® Bottom Entry Mixers, N5BE Series, offer an efficient solution for a wide range of industrial mixing needs. Whether you are looking to homogenize liquids, blend components, suspend solids, or optimize heat transfer, these mixers provide reliable, cost-effective, and high-performance solutions for large-scale industrial operations. Their high flow efficiency and robust design make them an ideal choice for demanding applications in chemical processing, pharmaceuticals, food processing, wastewater treatment, and more.</p>
+									<p><strong>Neutrone® Bottom Entry Mixers, N5BE Series</strong>, offer an efficient solution for a wide range of industrial mixing needs. Whether you are looking to homogenize liquids, blend components, suspend solids, or optimize heat transfer, these mixers provide reliable, cost-effective, and high-performance solutions for large-scale industrial operations. Their high flow efficiency and robust design make them an ideal choice for demanding applications in chemical processing, pharmaceuticals, food processing, wastewater treatment, and more.</p>
 								</div>
 							</div>
 						</div>
