--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 <body>
 
 <div class="top-bar-area header-area" id="sticky-header">
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-md-3">
 				<div class="header-logo">
-					<a href="index.html"><img class="w-100" src="assets/images/logo1.png" alt="logo"></a>
+					<a href="index.html"><img src="assets/images/logo1.png" alt="logo"></a>
 				</div>
 			</div>
 			<div class="d-flex justify-content-end col-md-7">
@@ -52,7 +52,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-md-2">
+			<div class="d-flex justify-content-end col-md-2">
 				<div class="header-button">
 					<a href="contact.html#contact_form">Get a Quote</a>
 				</div>
