--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="top-bar-area header-area" id="sticky-header">
 	<div class="container-fluid">
 		<div class="row align-items-center">
-			<div class="col-md-3">
+			<div class="d-flex justify-content-end col-md-3">
 				<div class="header-logo">
 					<a href="index.html"><img src="assets/images/logo1.png" alt="logo"></a>
 				</div>
