--- a/contact.html
+++ b/contact.html
@@ -181,7 +181,10 @@
 				</div>
 			</div>
 			<div id="contact_form" class="col-md-12 pl-0 pr-0" style="padding-top: 5rem;">
-				<div class="contact_from_box">
+				<iframe data-tally-src="https://tally.so/embed/mR1E9j?alignLeft=1&transparentBackground=1" loading="lazy" width="100%" height="403" frameborder="0" marginheight="0" marginwidth="0" title="Get a Quote
+"></iframe>
+<script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+				<!--<div class="contact_from_box">
 					<div class="contact_title pb-4">
 						<h3>Get a Quote</h3>
 					</div>
@@ -229,7 +232,7 @@
 						</div>
 					</form>
 					<div id="status"></div>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</div>
