--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 							</div>
 						</div>
 						<div class="col-lg-5 col-md-12 col-sm-12">
-							<form action="https://trimaxcentury.us5.list-manage.com/subscribe/post">
+							<form action="https://trimaxcentury.us5.list-manage.com/subscribe/post" method="POST">
 								<div class="newslatter-input-box">
 									<input type="text" name="Email" placeholder="Email Address" required>
 									<div class="newslatter-button">
