--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 						<div class="col-lg-5 col-md-12 col-sm-12">
 							<form action="https://trimaxcentury.us5.list-manage.com/subscribe/post" method="POST">
 								<div class="newslatter-input-box">
-									<input type="text" name="Email" placeholder="Email Address" required>
+									<input type="text" id="email" name="Email" placeholder="Email Address" required>
 									<div class="newslatter-button">
 										<button type="submit">Subscribe</button>
 									</div>
