--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 							</div>
 						</div>
 						<div class="col-lg-5 col-md-12 col-sm-12">
-							<form action="https://trimaxcentury.us5.list-manage.com/subscribe/post" method="POST">
+							<form action="https://trimaxcentury.us5.list-manage.com/subscribe/post?u=c7e14b8e2242b55adff74be45&amp;id=d7671dcfc2&amp;f_id=00f630ebf0" method="POST">
 								<div class="newslatter-input-box">
 									<input type="text" id="email" name="Email" placeholder="Email Address" required>
 									<div class="newslatter-button">
