--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 						<div class="col-lg-5 col-md-12 col-sm-12">
 							<form action="https://trimaxcentury.us5.list-manage.com/subscribe/post?u=c7e14b8e2242b55adff74be45&amp;id=d7671dcfc2&amp;f_id=00f630ebf0" method="post" name="mc-embedded-subscribe-form" target="_blank">
 								<div class="newslatter-input-box">
-									<input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="" placeholder="Email Address">
+									<input type="email" name="EMAIL" id="mce-EMAIL" required="" value="" placeholder="Email Address">
 									<div class="newslatter-button">
 										<button type="submit">Subscribe</button>
 									</div>
